--- a/src/index.template.html
+++ b/src/index.template.html
@@ -42,4 +42,5 @@
     <!-- DO NOT touch the following DIV -->
     <div id="q-app"></div>
   </body>
+  <script src="https://unpkg.com/html5-qrcode"></script>
 </html>
